--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,7 @@
 NODE_ENV=development
 
 # Server
-PORT=3001
-API_PREFIX=/api
+PORT=3000
 
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5433/workstream_cockpit?schema=public"
@@ -15,10 +14,14 @@ GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
 # Session
 SESSION_SECRET=your_session_secret_here_change_in_production
-SESSION_MAX_AGE=2592000000
+# Cookie domain (optional, e.g., .example.com for subdomain sharing)
+# COOKIE_DOMAIN=
+
+# Frontend URL (for redirects after auth)
+FRONTEND_URL=http://localhost:3001
 
 # CORS
-CORS_ORIGIN=http://localhost:3002
+CORS_ORIGIN=http://localhost:3001
 
 # Logging
 LOG_LEVEL=info
