--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     ports:
       - "3001:3001"
     environment:
-      NODE_ENV: production
+      NODE_ENV: development
       PORT: 3001
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/workstream_cockpit?schema=public
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
@@ -36,13 +36,14 @@ services:
       GOOGLE_CALLBACK_URL: ${GOOGLE_CALLBACK_URL:-http://localhost:3001/auth/google/callback}
       SESSION_SECRET: ${SESSION_SECRET}
       SESSION_MAX_AGE: 2592000000
+      FRONTEND_URL: http://localhost:3002
       CORS_ORIGIN: http://localhost:3002
       LOG_LEVEL: info
     depends_on:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -52,6 +53,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_API_URL=http://localhost:3001
     container_name: workstream-cockpit-frontend
     restart: unless-stopped
     ports:
