--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # Proxy API requests to backend
     location /api {
-        proxy_pass http://backend:3000;
+        proxy_pass http://backend:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -21,9 +21,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy auth requests to backend
-    location /auth {
-        proxy_pass http://backend:3000;
+    # Proxy backend auth endpoints only (not /auth/callback which is a frontend route)
+    location ~ ^/auth/(google|user|logout) {
+        proxy_pass http://backend:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
