--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run build --workspaces",
     "build:backend": "npm run build --workspace=backend",
     "build:frontend": "npm run build --workspace=frontend",
-    "test": "npm run test --workspaces",
+    "test": "npm run test --workspaces --if-present",
     "test:backend": "npm run test --workspace=backend",
     "test:frontend": "npm run test --workspace=frontend",
     "lint": "npm run lint --workspaces",
