fir docker compose path

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# PostgreSQL Database Configuration
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_secure_postgres_password_here
+POSTGRES_DB=workstream_cockpit
+POSTGRES_PORT=5433
+
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
