--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     container_name: workstream-cockpit-db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: workstream_cockpit
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-workstream_cockpit}
     ports:
-      - "5433:5432"
+      - "${POSTGRES_PORT:-5433}:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
@@ -26,19 +26,19 @@ services:
     container_name: workstream-cockpit-backend
     restart: unless-stopped
     ports:
-      - "3001:3001"
+      - "${BACKEND_PORT:-3001}:3001"
     environment:
-      NODE_ENV: development
+      NODE_ENV: ${NODE_ENV:-development}
       PORT: 3001
-      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/workstream_cockpit?schema=public
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-workstream_cockpit}?schema=public
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
       GOOGLE_CALLBACK_URL: ${GOOGLE_CALLBACK_URL:-http://localhost:3001/auth/google/callback}
-      SESSION_SECRET: ${SESSION_SECRET}
-      SESSION_MAX_AGE: 2592000000
-      FRONTEND_URL: http://localhost:3002
-      CORS_ORIGIN: http://localhost:3002
-      LOG_LEVEL: info
+      SESSION_SECRET: ${SESSION_SECRET:-changeme-dev-secret}
+      SESSION_MAX_AGE: ${SESSION_MAX_AGE:-2592000000}
+      FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3002}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:3002}
+      LOG_LEVEL: ${LOG_LEVEL:-info}
     depends_on:
       postgres:
         condition: service_healthy
@@ -54,11 +54,11 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        - VITE_API_URL=/
+        - VITE_API_URL=${VITE_API_URL:-/}
     container_name: workstream-cockpit-frontend
     restart: unless-stopped
     ports:
-      - "3002:80"
+      - "${FRONTEND_PORT:-3002}:80"
     depends_on:
       - backend
     healthcheck:
