--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # PostgreSQL Database Configuration
+POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=your_secure_postgres_password_here
 POSTGRES_DB=workstream_cockpit
@@ -11,3 +12,12 @@ GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
 # Session Secret (generate a random string)
 SESSION_SECRET=your_session_secret_here_change_in_production
+BACKEND_PORT=3001
+
+# Backup Configuration (Optional - for GCP Cloud Storage backups)
+BACKUP_ENABLED=false
+GCP_PROJECT_ID=your-gcp-project-id
+GCP_BUCKET_NAME=workstream-cockpit-backups
+GCP_SERVICE_ACCOUNT_KEY_PATH=/app/config/gcp-service-account.json
+BACKUP_SCHEDULE=0 2 * * *
+BACKUP_RETENTION_DAYS=30
