--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-alpine
 
-# Install OpenSSL for Prisma
-RUN apk add --no-cache openssl
+# Install OpenSSL for Prisma and PostgreSQL client for backups
+RUN apk add --no-cache openssl postgresql-client
 
 WORKDIR /app
 
