--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB:-workstream_cockpit}
-    ports:
-      - "${POSTGRES_PORT:-5433}:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
@@ -30,15 +28,39 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV:-development}
       PORT: 3001
-      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-workstream_cockpit}?schema=public
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+      
+      # Database connection details for backups
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      
+      # Authentication
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
       GOOGLE_CALLBACK_URL: ${GOOGLE_CALLBACK_URL:-http://localhost:3001/auth/google/callback}
       SESSION_SECRET: ${SESSION_SECRET:-changeme-dev-secret}
       SESSION_MAX_AGE: ${SESSION_MAX_AGE:-2592000000}
+      
+      # CORS
       FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3002}
       CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:3002}
+      
+      # Logging
       LOG_LEVEL: ${LOG_LEVEL:-info}
+      
+      # Backup configuration
+      BACKUP_ENABLED: ${BACKUP_ENABLED:-false}
+      GCP_PROJECT_ID: ${GCP_PROJECT_ID}
+      GCP_BUCKET_NAME: ${GCP_BUCKET_NAME}
+      GCP_SERVICE_ACCOUNT_KEY_PATH: ${GCP_SERVICE_ACCOUNT_KEY_PATH:-/app/config/gcp-service-account.json}
+      BACKUP_SCHEDULE: ${BACKUP_SCHEDULE:-0 2 * * *}
+      BACKUP_RETENTION_DAYS: ${BACKUP_RETENTION_DAYS:-30}
+    volumes:
+      # Mount GCP service account key for backups
+      - ./backend/config/gcp-service-account.json:/app/config/gcp-service-account.json:ro
     depends_on:
       postgres:
         condition: service_healthy
